# django-bootstrap-static

./: .gitignore  .travis.yml  AUTHORS.rst  LICENSE  MANIFEST.in  README.md  README.rst  build.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: pipeline.yml
bootstrap/: __init__.py
bootstrap/static/bootstrap/js/: bootstrap.min.js
bootstrap/templates/bootstrap/: base.html
fontawesome/: __init__.py
tests/: test_packaging.py  test_templates.py
tests/test_project/: settings.py
